学習スタート時の表示

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -2,3 +2,12 @@ ja:
   time:
     formats:
       default: "%Y/%m/%d %H:%M"
+  enums:
+    post:
+      status:
+        published: '投稿する'
+        draft: '下書きする'
+  activerecord:
+  errors:
+    messages:
+      record_invalid: "バリデーションに失敗しました: %{errors}"
