css9割完成 フォロー機能の非同期

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -356,8 +356,8 @@ ja:
         email: 'メールアドレス'
         password: 'パスワード'
         password_confirmation: 'パスワード確認'
-        last_name: '姓'
-        first_name: '名'
+        last_name: '苗字'
+        first_name: '名前'
         nickname: "ニックネーム"
       post:
         title: "タイトル"
