--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -362,3 +362,10 @@ ja:
       post:
         title: "タイトル"
         content: "内容"
+  views:
+    pagination:
+      first: "&laquo; 最初"
+      last: "最後 &raquo;"
+      previous: "&lsaquo; 前"
+      next: "次 &rsaquo;"
+      truncate: "..."
